# BORNE-ARCADE

./: .gitignore  README.md  index.html  package-lock.json
MenuTests/: MenuTests.sln
MenuTests/MenuTests/: Form1.Designer.cs  Form1.cs  MenuTests.csproj  Program.cs
SITE DE PAIEMENT YDAY/: package-lock.json  server.js
assets/css/: style.css
assets/js/: main.js
conf/: tokenUsed.conf
electronjs/: main.js
games/pong/: index.html  pong.js
jeux/: command.txt
jeux/04 Snake/: snake
jeux/09 Xonix/: xonix
jeux/13 Tron/: tron
jeux/16 Asteroids/: asteroids  main.cpp
jeux/SimpleNES/: keybindings.conf
jeux/game_sfml/simple_invaders/: CMakeLists.txt
jeux/game_sfml/simple_invaders/include/: alien.h  blastAlien.h  blastPlayer.h  fence.h  game.h  invaders.h  player.h
jeux/game_sfml/simple_invaders/include/items/: health.h  speed.h
jeux/game_sfml/simple_invaders/src/: alien.cpp  blastAlien.cpp  blastPlayer.cpp  fence.cpp  game.cpp  main.cpp  player.cpp
jeux/game_sfml/simple_invaders/src/items/: health.cpp  speed.cpp
js/: crypt.js
menu/: package-lock.json  package.json
menu-electron/: README.md  index.html  package-lock.json  package.json  remaining.txt  tokenUsed.txt
menu-electron/config/: keybindings.conf  remaining.conf  tokenUsed.conf
menu-electron/electronJS/: main.js
menu/conf/: tokenUsed.conf
menu/electronjs/: main.js
menu/view/: standby.html  token.html
site/: README.md
site/design/: index.html
site/php/: clearToken.php  writeDate.php  (+2 more)
testanim/: testanim.sln
token/: README.txt  tokenCrypter.js
view/: index.html
(+103 files in other folders)
